--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,6 @@
 <body>
     <div class="app"></div>
 
-    <script type="module" src="../index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
